# forenings_medlemmer

./: .coverage  .coveragerc  .editorconfig  .env.example  .flake8  .gitignore  .stickler.yml  .travis.yml  .unibeautifyrc.yml  CONTRIB.md  Dockerfile  README.md  SECURITY.md  activity.json  app.json  codecov.yaml  coverage.xml  dev-requirements.txt  docker-compose.arm64.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  heroku.yml  import_csv_list.py  lookups.sql  manage.py  member.code-workspace  package-lock.json  package.json  pre-commit  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  DEPLOYING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor.md
.github/workflows/: check-pull-request.yml  codeql-analysis.yml  prepare-deploy.yml  run_tests.yml  test.yml
duckhero/: db.sqlite3  manage.py  settings.py  urls.py
duckhero/duckhero/: settings.py  urls.py  wsgi.py
duckhero/members/: admin.py  models.py  urls.py  views.py
environment/: Dockerfile  reset-db.sh
fixtures/: departments.json  templates.json  unions.json
forenings_medlemmer/: settings.py  settings_test.py  urls.py  wsgi.py
generated_emails/: payment_confirmed_email.html  payment_confirmed_email.txt
medlemmer/: admin.py  models.py
members/: admin.py  apps.py  backends.py  context_processors.py  forms.py  inlines.py  jobs.py  managers.py  models.py  person_admin.py  person_admin_filters.py  schema.py  serializers.py  urls.py  views.py
members/admin/: __init__.py  activity_admin.py  activityinvite_admin.py  activitymode_admin.py  activityparticipant_admin.py  address_admin.py  admin_actions.py  anonymization_candidates_admin.py  consent_admin.py  department_admin.py  emailitem_admin.py  equipment_admin.py  family_admin.py  inlines.py  member_admin.py  membership_admin.py  municipality_admin.py  notifications.py  payable_item_admin.py  payment_admin.py  person_admin.py  person_admin_filters.py  slackinvitelog_admin.py  slackinvitesetup_admin.py  slacklog_admin.py  union_admin.py  user_admin.py  volunteer_admin.py  volunteerrequest_admin.py  volunteerrequestdepartment_admin.py  volunteerrequestitem_admin.py  waitinglist_admin.py
members/fixtures/: templates.json  unions.json
members/forms/: __init__.py  activity_invite_decline_form.py  activity_mode_update_form.py  activity_signup_form.py  (+16 more)
nginx/: Dockerfile  nginx.conf
pgadmin4/: servers.json
static/: static_file
test-results/: TEST-members.tests.test_model_department.TestModelDepartment-20190419004012.xml  TEST-members.tests.test_model_emailtemplate.TestEmailTemplate-20190419004012.xml  TEST-members.tests.test_model_equiment.TestModelEquipment-20190419004012.xml  TEST-members.tests.test_model_person.TestModelPerson-20190419004012.xml  TEST-members.tests.test_model_union.TestModelUnion-20190419004012.xml  TEST-members.tests.test_model_waitinglist.TestModelWaitinglist-20190419004012.xml
(+807 files in other folders)
