
[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.coverage.run]
omit = ["*/tests/*", "members/migrations"]

[tool.poetry]
package-mode = false
name = "forenings_medlemmer"
version = "1.2"
description = "Forenings system for Coding Pirates"
authors = ["Kristoffer Rath Hansen <kristoffer@codingpirates.dk>"]

[tool.poetry.dependencies]
black = "25.1.0"
crispy-bootstrap5 = "2025.6"
dj-database-url = "3.0.0"
dj-email-url = "1.0.6"
django = "5.2.10"
django-admin-rangefilter = "0.13.2"
django-bootstrap5 = "25.1"
django-cors-headers = "4.7.0"
django-crispy-forms = "2.4"
django-extensions = "4.1"
environs = "14.2.0"
factory-boy = "3.3.3"
flake8 = "7.3.0"
freezegun = "1.5.2"
graphene_django = "3.2.3"
gunicorn = "23.0.0"
psycopg2 = "2.9.10"
pydotplus = "2.0.2"
python = "^3.12"
pytz = "2024.2"
quickpay-api-client = "2.0.1"
selenium = "4.35.0"
sentry-sdk = "2.32.0"
tqdm = "4.67.1"
whitenoise = "6.9.0"
chromedriver-binary = "^114.0.5735.90.0"
chromium = "*"
